--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: build cross tools
         run: |
-         git clone --depth=0 https://review.haiku-os.org/buildtools
-         git clone --depth=0 https://review.haiku-os.org/haiku
+         git clone --depth 1 https://review.haiku-os.org/buildtools
+         git clone --depth 1 https://review.haiku-os.org/haiku
          cd ./haiku
          mkdir generated.x86_64; cd generated.x86_64
          ../configure --distro-compatibility official -j12 \
