--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,8 +33,8 @@ jobs:
          cd ./haiku
          mkdir generated.x86_64; cd generated.x86_64
          ../configure --distro-compatibility official -j12 \
-                  --build-cross-tools x86_64 ../../buildtools
-         cd ../../buildtools/jam
+                  --build-cross-tools x86_64 ../buildtools
+         cd ../buildtools/jam
          make all
          cd /opt/haiku/generated.x86_64
        
