--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,6 @@ jobs:
     - name: 'Checkout project'
       uses: 'actions/checkout@main'
     - name: 'Copy project to VM'
-      run: 'vmshell mkdir ./; tar -cf - ./ | vmshell tar -xf - -C ./'
-    - name: 'Test project'
-      run: 'vmshell make'
+      run: 'vmshell mkdir ./src; tar -cf - ./ | vmshell tar -xf - -C ./src'
+    - name: 'Build project'
+      run: 'vmshell make -C ./src'
