--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ jobs:
     - name: 'Install packages'
       run: 'vmshell pkgman install -y make makefile_engine'
     - name: 'Checkout project'
-      uses: 'actions/checkout@main'
+      uses: actions/checkout@v3
     - name: 'Copy project to VM'
-      run: 'vmshell mkdir ./src; tar -cf - ./ | vmshell tar -xf - -C ./src'
+      run: 'vmshell mkdir ./src/; tar -cf - ./ | vmshell tar -xf - -C ./src/'
     - name: 'Build project'
-      run: 'vmshell make -C ./src'
+      run: 'vmshell make -C ./src/'
