--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
       run: 'container-init & timeout 600 vmshell exit 0'
     - name: 'Install packages'
       run: 'vmshell pkgman install -y make makefile_engine'
+    - name: 'Reboot'
+      run: 'sv force-restart qemu ||:; timeout 600 vmshell exit 0'
     - name: 'Checkout project'
       uses: actions/checkout@v3
     - name: 'Copy project to VM'
