--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     - name: 'Wait until the VM is ready'
       run: 'container-init & timeout 600 vmshell exit 0'
     - name: 'Install packages'
-      run: 'vmshell pkgman install -y haiku_devel make makefile_engine gcc'
+      run: 'vmshell pkgman install -y haiku_devel make makefile_engine gcc multimarkdown'
     - name: 'Checkout project'
       uses: actions/checkout@v3
     - name: 'Copy project to VM'
