--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
       run: 'container-init & timeout 600 vmshell exit 0'
     - name: 'Install packages'
       run: 'vmshell pkgman install -y haiku_devel make makefile_engine gcc multimarkdown'
+    - name: 'Reboot VM'
+      run: 'sv force-restart qemu ||:; timeout 600 vmshell exit 0'
     - name: 'Checkout project'
       uses: actions/checkout@v3
     - name: 'Copy project to VM'
