--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
     - name: 'Install packages'
       run: 'vmshell pkgman install -y haiku_devel make makefile_engine gcc multimarkdown'
     - name: 'Reboot VM'
-      run: 'sv force-restart qemu ||:; timeout 600 vmshell exit 0'
+      run: 'vmshell sync; sv force-restart qemu ||:; timeout 600 vmshell exit 0'
     - name: 'Checkout project'
       uses: actions/checkout@v4
     - name: 'Copy project to VM'
