--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     - name: 'Wait until the VM is ready'
       run: 'container-init & timeout 600 vmshell exit 0'
     - name: 'Install packages'
-      run: 'vmshell pkgman install -y haiku_devel make makefile_engine gcc multimarkdown'
+      run: 'vmshell pkgman install -y haiku_devel make makefile_engine gcc gcc_syslibs multimarkdown'
     - name: 'Reboot VM'
       run: 'vmshell sync; sv force-restart qemu ||:; timeout 600 vmshell exit 0'
     - name: 'Checkout project'
