--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: haiku-ci
 
 on:
   workflow_dispatch:
@@ -6,21 +6,29 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-jobs:  
-  build:
-    name: 'build on Haiku'
-    runs-on: 'ubuntu-latest'
-    container: 'docker.io/hectorm/qemu-haiku:latest'
+jobs:
+  build-haiku:
+    timeout-minutes: 60
+    runs-on: ${{ matrix.config.runner }}
+    name: build-${{ matrix.config.os }}-${{ matrix.config.version }}-${{ matrix.config.architecture }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        config:
+          # The OS versions supported are specific to the version of the action
+          # https://github.com/cross-platform-actions/action/blob/master/changelog.md
+          - { os: haiku, version: 'r1beta5', runner: 'ubuntu-latest', architecture: 'x86-64' }
+          - { os: haiku, version: 'r1beta5',  runner: 'ubuntu-latest', architecture: 'x86' }
+
     steps:
-    - name: 'Wait until the VM is ready'
-      run: 'container-init & timeout 600 vmshell exit 0'
-    - name: 'Install packages'
-      run: 'vmshell pkgman install -y haiku_devel make makefile_engine gcc gcc_syslibs multimarkdown'
-    - name: 'Reboot VM'
-      run: 'vmshell sync; sv force-restart qemu ||:; timeout 600 vmshell exit 0'
-    - name: 'Checkout project'
-      uses: actions/checkout@v4
-    - name: 'Copy project to VM'
-      run: 'vmshell mkdir ./src/; tar -cf - ./ | vmshell tar -xf - -C ./src/'
-    - name: 'Build project'
-      run: 'vmshell make BUILDHOME=\`finddir B_SYSTEM_DEVELOP_DIRECTORY\` -C ./src/'
+      - uses: actions/checkout@v4
+
+      - uses: korli/action@v0.25.0-haiku1
+        with:
+          operating_system: ${{ matrix.config.os }}
+          version: ${{ matrix.config.version }}
+          architecture: ${{ matrix.config.architecture }}
+          run: |
+            ssh user@localhost "pkgman update -y haiku_devel cmd:gcc gcc_syslibs_devel multimarkdown" &&
+            make
